frontend/test/should_fail/index_pattern_too_many_dependencies.grg
#using "index_multiple_model.gm"

rule i {
	n1:N1;
	n2:N2;
	n:N{ascending(Ni >= n1.j, Ni <= n2.j)};
	
	modify {
	}
}
